k8s/00-namespace-and-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: netweaver
  labels:
    name: netweaver
    environment: production
